using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.SceneManagement;

public class targetmenurun : MonoBehaviour
{
    public Animator hehe;
    public AudioSource hoho;

    public void t1()
    {
        hehe.SetBool("t1", true);
    }
    public void t2()
    {
        hehe.SetBool("t2", true);
    }
    public void t3()
    {
        hehe.SetBool("t3", true);
    }
    public void t4()
    {
        hehe.SetBool("t4", true);
    }
    public void t5()
    {
        hehe.SetBool("t5", true);
    }
    public void t6()
    {
        hehe.SetBool("t6", true);
    }
    public void t7()
    {
        hehe.SetBool("t7", true);
    }
    public void t8()
    {
        hehe.SetBool("t8", true);
    }
    public void t9()
    {
        hehe.SetBool("t9", true);
    }
    public void t10()
    {
        hehe.SetBool("t10", true);
    }
    public void t11()
    {
        hehe.SetBool("t11", true);
    }
    public void t12()
    {
        hehe.SetBool("t12", true);
    }
    public void t13()
    {
        hehe.SetBool("t13", true);
    }
    public void t14()
    {
        hehe.SetBool("t14", true);
    }
    public void t15()
    {
        hehe.SetBool("t15", true);
    }
    public void yoayo()
    {
        SceneManager.LoadScene("MainMenu");
    }
    public void yu()
    {
        hoho.Play();
    }
}
